# Rush_Hour

./: .gitignore  CMakeLists.txt  README.md  chat.asp  desi.asp  desi2.asp  desi3.asp  logic.asp  main  main.cpp  mylogic.asp  output.txt  t.asp  tt.asp
asp/: rush_hour.asp  rush_hour_old.asp
data/: data.csv  test_n10_h1.csv  test_n1_h0.csv  test_n1_h1.csv  timing_h0.csv
gif_maker/: CMakeLists.txt  GifCreater.cc  GifCreater.hh  gif.h  main.cpp
gif_maker/data/: data_1.txt  data_3.txt  input1.asp  input3.asp
gif_maker/utils/: ImgGenerator.cc  ImgGenerator.hh
input/: input1.asp  input10.asp  input2.asp  input3.asp  input4.asp  input5.asp  input6.asp  input7.asp  input8.asp  input9.asp  input_advance_11.asp  input_advance_12.asp  input_advance_13.asp  input_advance_14.asp  input_advance_15.asp  input_advance_16.asp  input_advance_17.asp  input_advance_18.asp  input_advance_19.asp  input_advance_20.asp  input_advance_21.asp  input_advance_22.asp  input_advance_23.asp  input_advance_24.asp  input_advance_25.asp  input_advance_26.asp  input_advance_27.asp  input_advance_28.asp  input_advance_29.asp  input_advance_30.asp  input_advance_31.asp  input_advance_32.asp  input_advance_33.asp  input_advance_34.asp  input_advance_35.asp  input_advance_36.asp  input_advance_37.asp  input_advance_38.asp  input_advance_39.asp  input_advance_40.asp  (+110 more)
input_dataset/: parser  parser.cpp
resolver/: Resolver.cc  Resolver.hh
solutions/: solution1.asp  solution_input_advance_11.asp  solution_input_advance_12.asp  solution_input_advance_13.asp  solution_input_advance_14.asp  solution_input_advance_15.asp  solution_input_advance_16.asp  solution_input_advance_17.asp  solution_input_advance_18.asp  solution_input_advance_19.asp  solution_input_advance_20.asp  solution_input_advance_21.asp  solution_input_advance_22.asp  solution_input_advance_23.asp  solution_input_advance_24.asp  solution_input_advance_25.asp  solution_input_advance_26.asp  solution_input_advance_27.asp  solution_input_advance_28.asp  solution_input_advance_29.asp  solution_input_advance_30.asp  solution_input_advance_31.asp  solution_input_advance_32.asp  solution_input_advance_33.asp  solution_input_advance_34.asp  solution_input_advance_35.asp  solution_input_advance_36.asp  solution_input_advance_37.asp  solution_input_advance_38.asp  solution_input_advance_39.asp  (+110 more)
(+5 files in other folders)
